argo-combined-demo/argo-events/base/event-source-github.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-eventsource
  namespace: argo-events
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /push
        pathType: Prefix
        backend:
          service:
           name: webhook-eventsource-svc
           port:
             number: 12000
    host: acme.com
