argo-combined-demo/argo-events/base/event-sources.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: github-eventsource-svc
           port:
             number: 12000
    host: acme.com
